<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BangunDatar.TrapesiumActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:src="@drawable/trapesium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/trapesium"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/atas"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtAtas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/masukan_atas_sisi_1"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/bawah"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtBawah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/masukan_bawah_masukan_sisi_2"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tinggi_sisi_3"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTinggi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/masukan_tinggi_sisi_3"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sisi_4"
                android:textStyle="bold" />

            <EditText
                android:id="@id/edtSisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/masukan_sisi_4"
                android:inputType="number" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/keliling"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtKeliling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/luas"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtLuas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnHitung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/hitung" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/hapus" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rumus_keliling_s1_s2_s3_s4"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:textAlignment="textEnd"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rumus_luas_1_2_a_b_tinggi"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textAlignment="textEnd"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>